[package]
name = "payment-engine"
version = "0.1.0"
edition = "2024"
default-run = "cli"

[dependencies]
csv = "1.3.1"
rand = "0.9.2"
rust_decimal = "1.38.0"
serde = { version = "1.0.226", features = ["derive"] }
strum = { version = "0.27.2", features = ["strum_macros"] }
strum_macros = "0.27.2"
thiserror = "2.0.16"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
